mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongo-express
  labels: 
    apps: mongodb
  namespace: mongodb-example
specs:
  replicas: 1
  selector: 
    matchLabels: 
      app: mongo-express
  template:
    metadata: 
      labels:
        apps: mongo-express
    specs:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: mongodb-example
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
