mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-deployment
  labels: 
    apps: mongodb
  namespace: mongodb-example
specs:
  replicas: 1
  selector: 
    matchLabels: 
      app: mongodb
  template:
    metadata: 
      labels:
        apps: mongodb
    specs:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mongodb-example
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
