mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongodb-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  tls: 
  - host: abc.ielinfra.com
    secretName: mongodb-secret-tls
  rules: 
  - hosts: abc.ielinfra.com
    http:
      paths:
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
